fixed layout issues

--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -8,8 +8,8 @@ body{
 }
 
 section{
-    width: 80%;
-    height: 100%;
+    width: 80vw;
+    height: 100vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
